[package]
name = "caitlyn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies] # a lot of github smh
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
itertools = "0.10.3"
dotenv = "0.15.0"
ytextract = "0.10.3"
futures = "0.3.21"
regex = "1.5.6"

[dependencies.songbird]
features = ["builtin-queue"]
git = "https://github.com/serenity-rs/songbird"
branch = "next"

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "next"
features = ["cache", "standard_framework", "voice", "rustls_backend"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]